# rat

./: README.md
docker/: Dockerfile  bg_jupyter.sh
poster/: CMakeLists.txt  README.md  main.cpp
poster/include/: 2ch.hpp  menu.hpp  utils.hpp
poster/src/: 2ch.cpp  menu.cpp  utils.cpp
rat/: data.py  m.vocab  models.py  sample.py
rat/models/: char_lstm_trip_lite
train/: data.py  hyperparams.yml  m.model  models.py  rat.ipynb  sample.py
